--- a/CV/cv.html
+++ b/CV/cv.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CV</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
@@ -103,7 +103,7 @@
 
             <!--Sidebar section-->
             <aside class="sidebar-section">
-                <img src="/CV/imagini/photo.jpg" alt="Profile picture" width="370" class="sidebar-image">
+                <img src="photo.jpg" alt="Profile picture" width="370" class="sidebar-image">
 
                 <!--Contacts informations-->
                 <div class="contacts-container">
